# MapTextSynthesizer

./: #Makefile#  '  .#Makefile  .gitignore  CMakeLists.txt  DESIGN.md  Makefile  README.md  install.sh  mtsynth.pc  mtsynth.pc.in
inc/: map_text_synthesizer.hpp  mts_basehelper.hpp  mts_bghelper.hpp  mts_config.hpp  mts_implementation.hpp  mts_texthelper.hpp  mts_utilities.hpp
include/mtsynth/: map_text_synthesizer.hpp
include/text/: #map_text_synthesizer.hpp#  map_text_synthesizer.hpp  mts_basehelper.hpp  mts_bghelper.hpp  mts_implementation.hpp  mts_texthelper.hpp  mts_utilities.hpp
samples/: Makefile  a.out  benchmarkResults.txt  blocky_fonts.txt  config.txt  config_Antonio.txt  dataplot.py  edit_config  edit_config.cpp  executeRunAllBenchmarks.sh  iterSeed.sh  leak_memory.cpp  list_available_fonts.cpp  map_generator.py  mts_sample_shared  mts_test.py  regular_fonts.txt  runAllBenchMarks.cpp  shared_sample  showpng.py  static_sample  synthesizer_sample.cpp  text_synthesizer.cpp  text_synthesizer.py  text_synthesizer_py.cpp  text_syntheziser.cpp  viewAllImages.sh  viewImage  viewImage.cpp
samples/IA/: Arch.txt  Bar.txt  Beach.txt  Cape.txt  Channel.txt  Civil.txt  Cliff.txt  Crossing.txt  Dam.txt  Falls.txt  Forest.txt  Harbor.txt  Lake.txt  Mine.txt  Park.txt  Populated Place.txt  Post Office.txt  Reserve.txt  School.txt  Stream.txt  Summit.txt  Swamp.txt  Valley.txt  Woods.txt
samples/IA_placenames/: Airport.txt  Area.txt  Bay.txt  Bend.txt  Bridge.txt  Building.txt  Canal.txt  Cemetery.txt  Census.txt  Church.txt  Flat.txt  Gut.txt  Hospital.txt  Island.txt  Levee.txt  Locale.txt  Military.txt  Oilfield.txt  Pillar.txt  Plain.txt  Range.txt  Reservoir.txt  Ridge.txt  Spring.txt  Tower.txt  Trail.txt  Tunnel.txt
samples/benchmarkConfigs/: config0.txt  config1.txt  config10.txt  config11.txt  config12.txt  config13.txt  config14.txt  config15.txt  config16.txt  config17.txt  config18.txt  config19.txt  config2.txt  config20.txt  config21.txt  config22.txt  config23.txt  config24.txt  config25.txt  config26.txt  config27.txt  config28.txt  config29.txt  config3.txt  config4.txt  config5.txt  config6.txt  config7.txt  config8.txt  config9.txt
samples/captions/: asian.txt  latin_extended_additional.txt  multilingual.txt
samples/fonts/: blocky.txt  cursive_fonts.txt  customOnlyRegular.txt  regular.txt  simple.txt
samples/mts_buff/: Makefile  mts_faster.py  textsynthinterface.cpp
samples/reproducibleData/: genFile.sh  putData.sh
samples/reproducibleData/1/: caption1.txt  font1.txt
samples/reproducibleData/ALABAMA.228/: configALABAMA.228.txt
samples/reproducibleData/FRANKLIN.447/: captionFRANKLIN.447.txt  configFRANKLIN.447.txt
samples/reproducibleData/Mississippi.322/: configMississippi.322.txt
samples/reproducibleData/New.201/: configNew.201.txt
src/: .mts_texthelper.cpp.swp  Makefile  main  main.cpp  map_text_synthesizer.cpp  mts_basehelper.cpp  mts_bghelper.cpp  mts_config.cpp  mts_implementation.cpp  mts_texthelper.cpp  mts_texthelper.cpp~  mts_utilities.cpp
tensorflow/generator/: Makefile  README.md  config.txt  data_synth.py  maptextsynth.py  textsynthinterface.cpp
(+54 files in other folders)
